[package]
name = "jj"
version = "0.0.8"
edition = "2024"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo", "env"] }
clap_complete = "4.5.9"
self_update = { version = "0.40.0", features = [
    "archive-zip",
    "archive-tar",
    "compression-flate2",
    "signatures",
] }
